--- a/ProyectoGrupo9.html
+++ b/ProyectoGrupo9.html
@@ -19,47 +19,34 @@
             </ul>
         </nav>
     </header>
+    <p class="titulo">¡Bienvenido a nuestra página de adopción y rescate de mascotas!</p>
 <main>
-  <p class="titulo">¡Bienvenido a nuestra página de adopción y rescate de mascotas!</p>
-    <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/wallpaperbetter.com_1920x1080 (2).jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="pimag1">¿Quiénes Somos?</h5>
-              <p class="pimag1">Somos un equipo de voluntarios apasionados por los animales y comprometidos con el bienestar animal. Nuestro equipo está formado por veterinarios, cuidadores, entrenadores y amantes de los animales que dedican su tiempo y esfuerzo para hacer del mundo un lugar mejor para nuestros amigos de cuatro patas.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/wallpaperbetter.com_1920x1080 (1).jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="pimag2">Sección de Adopción</h5>
-              <p class="pimag2">Buscamos familias amorosas y responsables para nuestros perros rescatados, realizando un proceso de adopción cuidadoso para garantizar que cada perro encuentre el hogar perfecto.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/wallpaperbetter.com_1920x1080.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="pimag3">Sector de Perdidos</h5>
-              <p class="pimag3">Nos dedicamos a rescatar perros en situación de abandono, maltrato o peligro, proporcionándoles atención médica, alimentación y cuidados básicos. </p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
+  <div class="contenedor">
+  <div class="graficos">
+    <img src="img/wallpaperbetter.com_1920x1080 (2).jpg" alt="">
+    <div class="info">
+      <h1>¿Quienes Somos?</h1>  
+      <p>Somos un grupo de personas que tenemos por misión proporcionar un refugio seguro, amoroso y temporal para mascotas sin hogar mientras trabajamos para encontrarles familia.</p>
+      <a href="pages/Contacto.html" target="_blank" class="btn">Contacto</a>
+    </div>
+  </div>
+  <div class="graficos">
+    <img src="img/wallpaperbetter.com_1920x1080 (1).jpg" alt="">
+    <div class="info">
+      <h1>En Adopción</h1>  
+      <p>Aquí están los animalitos en adopción que buscan familia.</p>
+      <a href="pages/EnAdopcion.html" class="btn">En Adopción</a>
+    </div>
+  </div>
+  <div class="graficos">
+    <img src="img/wallpaperbetter.com_1920x1080.jpg" alt="">
+    <div class="info">
+      <h1>Encontrados</h1>  
+      <p>Aquí están los animalitos en desaparecidos que buscan a su familia de pertenencia.</p>
+      <a href="pages/Encontrados.html" class="btn">Encontrados</a>
+    </div>
+  </div>
+  </div>
   <article>
     <div> 
         <p class="texto">En nuestro mundo, las mascotas son más que simples animales; son miembros queridos de nuestras familias, compañeros leales y fuentes inagotables de amor y alegría. En nuestra misión de amor y compasión, nos dedicamos a rescatar, rehabilitar y encontrar hogares amorosos para mascotas necesitadas. Cada historia detrás de nuestras mascotas rescatadas es única, pero todas comparten un denominador común: una segunda oportunidad. Ya sea que hayan sido abandonadas, maltratadas o simplemente necesiten un nuevo hogar, estamos aquí para brindarles el apoyo y la atención que merecen. En nuestra página, encontrarás una variedad de mascotas adorables y amorosas que están listas para encontrar un hogar para siempre. Desde perros y gatos hasta conejos y pájaros, tenemos una diversidad de animales esperando ansiosamente conocer a su nueva familia. Al adoptar una mascota de nuestro refugio, no solo estás cambiando su vida para mejor, sino que también estás enriqueciendo la tuya. El vínculo especial que se forma entre un humano y su mascota es incomparable, y estamos aquí para ayudarte a iniciar esa maravillosa aventura. Explora nuestras historias, conoce a nuestros valientes rescatados y descubre cómo puedes ser parte de esta hermosa misión de amor y compasión. ¡Únete a nosotros y sé parte del cambio hoy!
@@ -87,7 +74,7 @@
       <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
     </svg></a>
     </li>
-    </ul>
+  </ul>
   <p>© 2024 Grupo 9 / Web de Adopción</p>
 </footer>
 </html>
