update de pagina adopcion

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -16,7 +16,7 @@
                 <li><a href="../ProyectoGrupo9.html" target="_blank">Inicio</a></li>
                 <li><a href="../pages/Encontrados.html" target="_blank">Encontrados</a></li>
                 <li><a href="../pages/EnAdopcion.html" target="_blank">En Adopción</a></li>
-                <li><a href="../pages/Contacto.html" target="_blank">Contacto</a></li>
+                <li>Contacto</li>
             </ul>
         </nav>
     </header>
@@ -62,7 +62,7 @@
     <img src="../img/contacto/gato-6.jpg" alt="">
     <div class="info">
       <h1>Donaciones</h1>  
-      <p>Podes colaborar en nuestra cuenta de Mercado Pago: Alias "Patitas.Felices" para ayudar a la compra de alimentos y cuidados generales y veterinarios. </p>
+      <p>Podes colaborar en nuestra cuenta de Mercado Pago: Alias "patitas.frias" para ayudar a la compra de alimentos y cuidados generales y veterinarios. </p>
        <p>A fin de mes realizamos un sorteo entre todas las personas que realizaron donaciones, para eso envianos el comprobante en el formulario de contacto o por mail.</p>
     </div>
   </div>
