--- a/pages/Encontrados.html
+++ b/pages/Encontrados.html
@@ -15,8 +15,8 @@
       <ul class="menu">
         <li><a href="../ProyectoGrupo9.html">Inicio</a></li>
         <li>Encontrados</li>
-        <li><a href="pages/EnAdopcion.html" target="_blank">En Adopción</a></li>
-        <li><a href="pages/Contacto.html" target="_blank">Contacto</a></li>
+        <li><a href="../pages/EnAdopcion.html" target="_blank">En Adopción</a></li>
+        <li><a href="../pages/Contacto.html" target="_blank">Contacto</a></li>
       </ul>
     </nav> 
   </header>
@@ -95,7 +95,7 @@
         <h3><b><u>Nuestro alias es</u>:</b> patitas.frias.mp </h3>
         <br>
         <p>¿Querés ayudarnos? Podes hacerlo donando alimento, medicamentos, productos de botiquin o mantas para que ellos duerman calentitos.
-          Completa el formulario en <a href="pages/Contacto.html" target="_blank">Contacto</a>.
+          Completa el formulario en <a href="../pages/Contacto.html" target="_blank">Contacto</a>.
         </p>
      </div>  
         
