--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -27,8 +27,8 @@
     <img src="../img/contacto/perro-3.jpg" alt="">
     <div class="info">
       <h1>El refugio</h1>  
-      <p>Damos refugio a gatos y perros en el barrio de Palermo.<p/>
-      <p>Podés visitarnos de <br/>Lunes a Sábado: 9 a 17hs.</p>
+      <p>Damos refugio a gatos y perros en el barrio de Palermo.</p>
+      <p>Podés visitarnos de <br>Lunes a Sábado: 9 a 17hs.</p>
 
     <p>Dirección: El Salvador 2132</p>
     <p>Teléfono: 11 4565-2231</p>
@@ -54,7 +54,7 @@
     <img src="../img/contacto/perro-7.jpg" alt="">
     <div class="info">
       <h1>Voluntarios</h1>  
-      <p>Nuestra misión es posible gracias a voluntarios que dan tránsito a los perros y gatos en sus hogares, y que asisten en el cuidado de las mascotas en el refugio. <p/>
+      <p>Nuestra misión es posible gracias a voluntarios que dan tránsito a los perros y gatos en sus hogares, y que asisten en el cuidado de las mascotas en el refugio. </p>
       <p>Si quieres sumarte dejanos un mensaje.</p>
     </div>
   </div>
@@ -70,13 +70,13 @@
 
   <div>
   </div> 
-
   <div class="form">
-    <form>
+      <form>
+        <fieldset>
         <legend>Consultas</legend>
         <div class="form-control">
           <label for="name">Cuál es tu nombre?</label>
-          <input type="name" id="name" placeholder="Escribe tu nombre aquí" required />
+          <input type="text" id="name" placeholder="Escribe tu nombre aquí" >
         </div>
 
         <div class="form-control">
@@ -84,7 +84,7 @@
           <input
             type="email"
             id="email"
-            placeholder="Escribe tu Email aquí" required />
+            placeholder="Escribe tu Email aquí" required >
         </div>
 
         <div class="form-control">
@@ -92,7 +92,7 @@
           <input
             type="tel"
             id="tel"
-            placeholder="Escribe tu Tel aquí" required />
+            placeholder="Escribe tu Tel aquí" required >
         </div>
 
         <div class="form-control">
@@ -118,14 +118,14 @@
           ></textarea>
         </div>
 
-        <input type="submit" value="Enviar" class="submit-btn" />
+        <input type="submit" value="Enviar" class="submit-btn" >
+      </fieldset>
     </form>
   </div>
 </main>   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
 <footer>
   <ul class="redes">
     <li class="facebook"> <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -143,4 +143,5 @@
   </ul>
   <p>© 2024 Grupo 9 / Web de Adopción</p>
 </footer>
+</body>
 </html>
