--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link rel="icon" type="image/png" href="../img/Favicon-32x32.png">
     <link rel="stylesheet" href="../css/Estilos.css">
     <link rel="stylesheet" href="../css/contacto.css">
 </head>
@@ -13,9 +13,9 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="../ProyectoGrupo9.html" target="_blank">Inicio</a></li>
-                <li><a href="../pages/Encontrados.html" target="_blank">Encontrados</a></li>
-                <li><a href="../pages/EnAdopcion.html" target="_blank">En Adopción</a></li>
+                <li><a href="../ProyectoGrupo9.html">Inicio</a></li>
+                <li><a href="../pages/Encontrados.html">Encontrados</a></li>
+                <li><a href="../pages/EnAdopcion.html">En Adopción</a></li>
                 <li>Contacto</li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
 
     <p>Dirección: El Salvador 2132</p>
     <p>Teléfono: 11 4565-2231</p>
-    <p>Email: info@patitas.felices.com</p>  
+    <p>Email: info@patitas.frias.com</p>  
     
   <ul class="redes">
     <li class="facebook"> <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -127,6 +127,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <footer>
+  <img src="../img/logo.png" alt="">
   <ul class="redes">
     <li class="facebook"> <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
       <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
