Update and rename ProyectoGrupo9.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="ProyectoGrupo9.html" target="_blank">Inicio</a></li>
+                <li>Inicio</li>
                 <li><a href="pages/Encontrados.html" target="_blank">Encontrados</a></li>
                 <li><a href="pages/EnAdopcion.html" target="_blank">En Adopción</a></li>
                 <li><a href="pages/Contacto.html" target="_blank">Contacto</a></li>
