--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="../ProyectoGrupo9.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/Encontrados.html">Encontrados</a></li>
                 <li><a href="../pages/EnAdopcion.html">En Adopción</a></li>
                 <li>Contacto</li>
