--- a/pages/EnAdopcion.html
+++ b/pages/EnAdopcion.html
@@ -14,7 +14,7 @@
   <header>
     <nav>
       <ul class="menu">
-        <li><a href="../ProyectoGrupo9.html">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li><a href="../pages/Encontrados.html">Encontrados</a></li>       
         <li>En Adopción</li>
         <li><a href="../pages/Contacto.html">Contacto</a></li>
