--- a/pages/Encontrados.html
+++ b/pages/Encontrados.html
@@ -14,7 +14,7 @@
   <header>
     <nav>
       <ul class="menu">
-        <li><a href="../ProyectoGrupo9.html">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li>Encontrados</li>
         <li><a href="../pages/EnAdopcion.html">En Adopción</a></li>
         <li><a href="../pages/Contacto.html">Contacto</a></li>
